# communitas

./: .gitignore  Dockerfile  Procfile  README.md  app.py  docker-compose.yml  heroku.yml  index.py  package-lock.json  package.json  population.py  pyproject.toml  tsconfig.json
.github/workflows/: docker-image.yml
api-server/: index.ts
apps/api-server/src/: index.ts
data/Helsedirektoratet/National_quality_indicators/: national_quality_indicators-data.md  nki-data-2018.xlsx  nki-data-2020.xlsx
data/Helsedirektoratet/National_quality_indicators/dataset/: nki-data-2021.xlsx
data/municipalities/: municipalities.json
data/municipality-doctors/dataset/: doctors-1804-2025-04.json
data/quality_indicators/dataset/: nki-data-2017.xlsx  nki-data-2019.xlsx
pages/: home.py  population.py
scripts/python/: municipalities.py  population.py
utilities/: population.py
