[tool.poetry]
name = "communitas"
version = "0.1.0"
description = "Data analytics for municipalities"
authors = ["Ole Kristian Losvik <ole@losol.no>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.4.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyeda = "python_eda.main:app"